--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-welcome to my website
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>liang0219</title>
+  </head>
+  <body>
+    <img src="https://raw.githubusercontent.com/liang0219/photo/main/%E4%B8%8B%E8%BC%89.jpg" alt="liang">
+  </body>
+</html>
