--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Jie</title>
+    <title>liang0219</title>
   </head>
   <body>
-    <img src="https://raw.githubusercontent.com/liang0219/photo/main/123.jpg" alt="Jie">
+    <img src="https://raw.githubusercontent.com/liang0219/photo/main/123.jpg" alt="liang0219">
   </body>
 </html>
