--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>liang0219</title>
   </head>
   <body>
-    <img src="https://raw.githubusercontent.com/liang0219/photo/main/123.jpg" alt="liang0219">
+    <img src="https://raw.githubusercontent.com/liang0219/photo/main/%E4%B8%8B%E8%BC%89.jpg" alt="liang0219">
   </body>
 </html>
